--- a/Activity 3(371).HTML
+++ b/Activity 3(371).HTML
@@ -8,9 +8,9 @@
 		<br/>
 		<a href="http://www.iitb.ac.in/" target="_blank" style="color:white">ABOUT US</a> |
 		<a href="http://www.iitd.ac.in/" target="_blank" style="color:white">BLOG</a> |
-		<a href="https://www.iitm.ac.in/" target="_blank" style="color:white">FAQ</a> |
+		<a href="C:\Users\manmo\Desktop\Activity 4(371).HTML" target="_blank" style="color:white">FAQ</a> |
 		</div>
-		<a href="https://accounts.google.com/signin/v2/identifier?hl=en&continue=https%3A%2F%2Fmail.google.com%2Fmail&service=mail&flowName=GlifWebSignIn&flowEntry=AddSession" target="_blank">Go To Address</a>
+		<a href="#bugade">Go To Address</a>
 		<br/>
 		<center>
 		<h1>Activity-3</h1>	
@@ -33,7 +33,10 @@
 			<center>
 			<h1 style="color:white">About eBots</h1>
 			</center>
-		<p><font size="4"><img src="C:\Users\manmo\Downloads\unnamed.jpg" alt="image of a nature" style="float:right;width:370px;height:110px" ><br>
+		<font size="4">
+		<a href="https://www.w3schools.com/html/default.asp" target="_blank">
+		<img src="C:\Users\manmo\Downloads\unnamed.jpg" alt="image of a nature" style="float:right;width:350px;height:120px"></a>
+		<br>
 		<ul type="square" style="color:white">
 			<li>Energy efficiency indicators</li>
 			<li>Remote
@@ -44,12 +47,11 @@
 			</li>
 			<li>Excess Energy Consumption Alert</li>
 			<li>Customizable App to map  your home and appliances</li>
-		</ul>	
-		</p>
+		</ul>
 		</div>
-	<p><font size="2"><i>Corp. Off.: Ground Floor,Infotech Center<br>
+	<address id="bugade"><font size="2">Corp. Off.: Ground Floor,Infotech Center<br>
 	14/2 Milestone,Dundahera,Old Gurgaon Road Gurugram,Haryana-122008,India<br>
 	Tel : +91-0124-42244188<br>
-	Web : www.energy-bots.com</i></font></p>
+	Web : www.energy-bots.com</font></address>
 	</body>
 <html>
