--- a/Activity 3(371).HTML
+++ b/Activity 3(371).HTML
@@ -22,7 +22,7 @@
 		<br>
 		<h1><u>Our mission</u></h1>
 		<br>
-		<p><font size="4"><img src="C:\Users\manmo\Downloads\unnamed.jpg" alt="image of a nature" style="float:right;width:270px;height:110px;border-color:lightblue"  border="10" >
+		<p><font size="4"><img src="https://images.unsplash.com/photo-1538477080496-24fefe5fe161?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="image of a nature" style="float:right;width:270px;height:110px;border-color:lightblue"  border="10" >
 		Our mission at EnergyBots is to make the information on energy consumption available and transparent. Today we provide the most actionable data & 
 		insights using our products and mobile app (eBots). We want to make this <span style="color:red">data available</span> to as many individuals and 
 		organizations as possible.</font></p>
@@ -35,7 +35,7 @@
 			</center>
 		<font size="4">
 		<a href="https://www.w3schools.com/html/default.asp" target="_blank">
-		<img src="C:\Users\manmo\Downloads\unnamed.jpg" alt="image of a nature" style="float:right;width:350px;height:120px"></a>
+		<img src="https://images.unsplash.com/photo-1497968021412-a86898ccbc4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80" alt="image of a nature" style="float:right;width:350px;height:120px"></a>
 		<br>
 		<ul type="square" style="color:white">
 			<li>Energy efficiency indicators</li>
